--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>com.bigboxer23</groupId>
       <artifactId>utils</artifactId>
-      <version>2.0.35</version>
+      <version>2.0.36</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -48,7 +48,11 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.17.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.hivemq</groupId>
+      <artifactId>hivemq-mqtt-client</artifactId>
+      <version>1.3.3</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
