--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,11 @@
       <version>3.17.0</version>
     </dependency>
     <dependency>
-      <groupId>com.hivemq</groupId>
-      <artifactId>hivemq-mqtt-client</artifactId>
-      <version>1.3.3</version>
+      <groupId>org.eclipse.paho</groupId>
+      <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+      <version>1.2.5</version>
     </dependency>
+
   </dependencies>
   <repositories>
     <repository>
